2013-03-20  Vladimir Serbinenko  <phcoder@gmail.com>

	Slight improve in USB-related boot-time checkpoints.

2013-03-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/boottime.c: Fix copyright header.

2013-03-20  Vladimir Serbinenko  <phcoder@gmail.com>

	New commands cbmemc, lscoreboot, coreboot_boottime to inspect
	coreboot tables content. Support for cbmemc.

2013-03-20  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix a conflict between ports structures with 2 controllers of
	same kind.

2013-03-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/boottime.h: Add missing file.

2013-03-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Initialize USB ports in parallel to speed-up boot.

2013-03-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix USB devices not being detected when requested
	due to delayed attach.

2013-03-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Implement boot time analysis framework.

2013-03-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove get_endpoint_descriptor and change all functions needing
	descriptor to just receive it as argument rather than endpoint
	address.

2013-03-19  Aleš Nesrsta  <starous@volny.cz>

	Better estimate the maximum USB transfer size.

2013-03-17  Vladimir Serbinenko  <phcoder@gmail.com>

	Resend a packet if we got the wrong buffer in status.

2013-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/bsdXX.c (grub_openbsd_find_ramdisk): Use
	multiplication rather than division.

2013-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/arg.c (grub_arg_list_alloc): Use shifts rather
	than divisions.

2013-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/verify.c (grub_verify_signature): Use unsigned
	operations to have intended shifts and not divisions.

2013-03-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/pc/plan9.c (fill_disk): Fix types to use
	intended shifts rather than division.
